--- a/app/src/main/res/layout/actualizar_tara.xml
+++ b/app/src/main/res/layout/actualizar_tara.xml
@@ -16,8 +16,8 @@
         android:layout_alignParentStart="true">
 
         <FrameLayout
-            android:layout_width="424dp"
-            android:layout_height="144dp"
+            android:layout_width="match_parent"
+            android:layout_height="278dp"
             android:layout_margin="5dp"
             android:padding="10dp"
             android:elevation="10dp"
@@ -33,106 +33,47 @@
                 android:layout_gravity="left|top"
                 android:textSize="25dp" />
 
-            <TextView
-                android:layout_width="107dp"
-                android:layout_height="wrap_content"
-                android:text="Codigo de Barras:"
-                android:id="@+id/textView"
-                android:layout_gravity="left|bottom"
-                android:textColor="#1a0000"
-                android:textSize="15dp"
-                android:padding="10dp" />
-
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/x_codigobarras"
-                android:layout_gravity="right|bottom"
+                android:layout_gravity="right|center_vertical"
                 android:background="@android:drawable/ic_menu_camera" />
 
             <EditText
-                android:layout_width="156dp"
+                android:layout_width="217dp"
                 android:layout_height="52dp"
                 android:id="@+id/x_codigobarrascapturado"
-                android:layout_gravity="center_horizontal|bottom"
+                android:layout_gravity="center"
                 android:background="#ffffff"
                 android:textColor="#000000"
                 android:textSize="15dp"
                 android:textAlignment="center" />
 
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="430dp"
-            android:layout_height="160dp"
-            android:layout_margin="5dp"
-            android:padding="10dp"
-            android:layout_weight="0.36"
-            android:layout_gravity="left|bottom"
-            android:elevation="10dp"
-            android:background="#f4f4f4">
-
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="117dp"
                 android:layout_height="wrap_content"
-                android:text="Llenado:"
-                android:id="@+id/textView5"
-                android:layout_gravity="left|top"
-                android:textColor="#000000"
-                android:textSize="25dp"
-                android:textIsSelectable="false" />
-
-            <TextView
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:text="Lote:"
-                android:id="@+id/textView2"
-                android:layout_gravity="center_horizontal|top"
-                android:textColor="#000000"
+                android:text="Codigo de Barras:"
+                android:id="@+id/textView"
+                android:layout_gravity="left|center_vertical"
+                android:textColor="#1a0000"
                 android:textSize="15dp"
                 android:padding="10dp" />
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/x_lote"
-                android:layout_gravity="right|top"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textAlignment="center"
-                android:background="#ffffff" />
-
-            <Spinner
-                android:layout_width="165dp"
-                android:layout_height="45dp"
-                android:id="@+id/x_estacion"
-                android:layout_gravity="right|bottom"
-                android:background="#000000"
-                android:textAlignment="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="67dp"
-                android:text="Estacion:"
-                android:id="@+id/textView3"
-                android:layout_gravity="center_horizontal|bottom"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:padding="10dp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Registrar Llenado"
-                android:id="@+id/x_registrarllenado"
-                android:padding="10dp"
-                android:layout_gravity="left|bottom"
-                android:elevation="10dp" />
-
+            <ImageView
+                android:layout_width="149dp"
+                android:layout_height="102dp"
+                android:id="@+id/x_imagenrecipien"
+                android:layout_gravity="center_horizontal|bottom" />
 
         </FrameLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Actualizar"
+            android:id="@+id/x_actualizar"
+            android:layout_gravity="left|bottom" />
 
     </FrameLayout>
 
@@ -165,18 +106,18 @@
                     <TextView
                         android:layout_width="124dp"
                         android:layout_height="wrap_content"
-                        android:text="Tara impresa"
+                        android:text="Tara Real:"
                         android:id="@+id/textView9"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
-                        android:textSize="12dp"
+                        android:textSize="15dp"
                         android:padding="10dp" />
 
                     <EditText
-                        android:layout_width="173dp"
+                        android:layout_width="206dp"
                         android:layout_height="32dp"
-                        android:id="@+id/x_taraimpresa"
-                        android:layout_gravity="center"
+                        android:id="@+id/x_tarareal"
+                        android:layout_gravity="right|center_vertical"
                         android:background="#ffffff"
                         android:textColor="#0238c2"
                         android:textSize="20dp"
@@ -205,18 +146,18 @@
                     <TextView
                         android:layout_width="135dp"
                         android:layout_height="wrap_content"
-                        android:text="Capacidad Cloro"
+                        android:text="Tara nueva:"
                         android:id="@+id/textView10"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
-                        android:textSize="12dp"
+                        android:textSize="15dp"
                         android:padding="10dp" />
 
                     <EditText
-                        android:layout_width="175dp"
+                        android:layout_width="206dp"
                         android:layout_height="32dp"
-                        android:id="@+id/x_cloro"
-                        android:layout_gravity="center"
+                        android:id="@+id/x_taranueva"
+                        android:layout_gravity="right|center_vertical"
                         android:background="#ffffff"
                         android:textColor="#0238c2"
                         android:textSize="20dp"
@@ -258,11 +199,18 @@
                         android:textSize="15dp"
                         android:padding="10dp" />
 
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/x_checknumeroserie"
+                        android:layout_gravity="right|center_vertical"
+                        android:checked="false" />
+
                     <EditText
-                        android:layout_width="123dp"
+                        android:layout_width="206dp"
                         android:layout_height="32dp"
                         android:id="@+id/x_numserie"
-                        android:layout_gravity="center"
+                        android:layout_gravity="right|center_vertical"
                         android:background="#ffffff"
                         android:textColor="#0238c2"
                         android:textSize="20dp"
@@ -270,13 +218,6 @@
                         android:inputType="text"
                         android:editable="false"
                         android:focusable="true" />
-
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/x_checknumeroserie"
-                        android:layout_gravity="right|center_vertical"
-                        android:checked="false" />
                 </FrameLayout>
             </TableRow>
 
@@ -289,11 +230,21 @@
                     android:layout_height="50dp"
                     android:contextClickable="false" >
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tipo recipiente:"
+                        android:id="@+id/textView7"
+                        android:layout_gravity="left|center_vertical"
+                        android:textColor="#1a0000"
+                        android:textSize="15dp"
+                        android:padding="10dp" />
+
                     <EditText
-                        android:layout_width="123dp"
+                        android:layout_width="206dp"
                         android:layout_height="32dp"
-                        android:id="@+id/x_tarareal"
-                        android:layout_gravity="center"
+                        android:id="@+id/x_tipoRecipiente"
+                        android:layout_gravity="right|center_vertical"
                         android:background="#ffffff"
                         android:textColor="#0238c2"
                         android:textSize="20dp"
@@ -301,22 +252,6 @@
                         android:inputType="text"
                         android:focusable="true" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tara real:"
-                        android:id="@+id/textView7"
-                        android:layout_gravity="left|center_vertical"
-                        android:textColor="#1a0000"
-                        android:textSize="15dp"
-                        android:padding="10dp" />
-
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/x_chtarareal"
-                        android:layout_gravity="right|center_vertical"
-                        android:checked="false" />
                 </FrameLayout>
             </TableRow>
 
@@ -329,33 +264,27 @@
                     android:layout_height="60dp"
                     android:contextClickable="false" >
 
-                    <EditText
-                        android:layout_width="123dp"
-                        android:layout_height="32dp"
-                        android:id="@+id/x_pruebahidro"
-                        android:layout_gravity="center"
-                        android:background="#ffffff"
-                        android:textColor="#0238c2"
-                        android:textSize="20dp"
-                        android:textAlignment="textEnd"
-                        android:focusable="true" />
-
                     <TextView
-                        android:layout_width="102dp"
+                        android:layout_width="196dp"
                         android:layout_height="wrap_content"
-                        android:text="Prueba Hidrostatica"
+                        android:text="Capacidad Cloro:"
                         android:id="@+id/textView8"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
                         android:textSize="15dp"
                         android:padding="10dp" />
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/x_chhidro"
+                    <EditText
+                        android:layout_width="206dp"
+                        android:layout_height="32dp"
+                        android:id="@+id/x_capacidadCloro"
                         android:layout_gravity="right|center_vertical"
-                        android:checked="false" />
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:focusable="true" />
+
                 </FrameLayout>
             </TableRow>
 
@@ -369,26 +298,26 @@
                     android:contextClickable="false"
                     android:layout_column="0">
 
-                    <EditText
-                        android:layout_width="123dp"
-                        android:layout_height="32dp"
-                        android:id="@+id/x_siguientePrueba"
-                        android:layout_gravity="center"
-                        android:background="#ffffff"
-                        android:textColor="#0238c2"
-                        android:textSize="20dp"
-                        android:textAlignment="textEnd"
-                        android:focusable="true" />
-
                     <TextView
-                        android:layout_width="102dp"
+                        android:layout_width="187dp"
                         android:layout_height="wrap_content"
-                        android:text="Siguiente Prueba"
+                        android:text="Tara impresa:"
                         android:id="@+id/textView11"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
                         android:textSize="15dp"
                         android:padding="10dp" />
+
+                    <EditText
+                        android:layout_width="206dp"
+                        android:layout_height="32dp"
+                        android:id="@+id/x_taraImpresa"
+                        android:layout_gravity="right|center_vertical"
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:focusable="true" />
 
                 </FrameLayout>
             </TableRow>
@@ -417,33 +346,5 @@
         android:layout_toRightOf="@+id/imageView3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="115dp"
-        android:id="@+id/x_advertenciaimg"
-        android:layout_gravity="right|bottom"
-        android:background="@drawable/advertencia"
-        android:visibility="invisible"
-        android:layout_above="@+id/frameLayout2"
-        android:layout_alignRight="@+id/imageView4"
-        android:layout_alignEnd="@+id/imageView4"
-        android:layout_alignTop="@+id/x_addvertenciatexto" />
-
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Requiere prueba hidrostatica"
-        android:id="@+id/x_addvertenciatexto"
-        android:layout_gravity="right|bottom"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textAlignment="viewStart"
-        android:visibility="invisible"
-        android:padding="10dp"
-        android:layout_above="@+id/frameLayout2"
-        android:layout_toLeftOf="@+id/x_advertenciaimg"
-        android:layout_toStartOf="@+id/x_advertenciaimg" />
 
 </RelativeLayout>
